Interpreted database tables to identify columns and began working on setting up the class.

--- a/climate.ipynb
+++ b/climate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,20 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Python SQL toolkit and Object Relational Mapper\n",
     "import sqlalchemy\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, func\n",
+    "from sqlalchemy import inspect\n",
+    "from sqlalchemy import Column, Integer, String, Float\n",
+    "from sqlalchemy.types import Date\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,22 +67,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "measurement\n",
+      "[{'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'id',\n",
+      "  'nullable': False,\n",
+      "  'primary_key': 1,\n",
+      "  'type': INTEGER()},\n",
+      " {'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'station',\n",
+      "  'nullable': True,\n",
+      "  'primary_key': 0,\n",
+      "  'type': TEXT()},\n",
+      " {'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'date',\n",
+      "  'nullable': True,\n",
+      "  'primary_key': 0,\n",
+      "  'type': TEXT()},\n",
+      " {'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'prcp',\n",
+      "  'nullable': True,\n",
+      "  'primary_key': 0,\n",
+      "  'type': FLOAT()},\n",
+      " {'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'tobs',\n",
+      "  'nullable': True,\n",
+      "  'primary_key': 0,\n",
+      "  'type': FLOAT()}]\n",
+      "station\n",
+      "[{'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'id',\n",
+      "  'nullable': False,\n",
+      "  'primary_key': 1,\n",
+      "  'type': INTEGER()},\n",
+      " {'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'station',\n",
+      "  'nullable': True,\n",
+      "  'primary_key': 0,\n",
+      "  'type': TEXT()},\n",
+      " {'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'name',\n",
+      "  'nullable': True,\n",
+      "  'primary_key': 0,\n",
+      "  'type': TEXT()},\n",
+      " {'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'latitude',\n",
+      "  'nullable': True,\n",
+      "  'primary_key': 0,\n",
+      "  'type': FLOAT()},\n",
+      " {'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'longitude',\n",
+      "  'nullable': True,\n",
+      "  'primary_key': 0,\n",
+      "  'type': FLOAT()},\n",
+      " {'autoincrement': 'auto',\n",
+      "  'default': None,\n",
+      "  'name': 'elevation',\n",
+      "  'nullable': True,\n",
+      "  'primary_key': 0,\n",
+      "  'type': FLOAT()}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inspector = inspect(engine)\n",
+    "table_names = inspector.get_table_names()\n",
+    "for table_name in table_names:\n",
+    "    print(table_name)\n",
+    "    columns = inspector.get_columns(table_name)\n",
+    "    pprint(columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
+    "measurement_table = Table(measurement, metadata,\n",
+    "                    Column(\"id\", Integer, primary_key=True),\n",
+    "                    Column(\"station\", String),\n",
+    "                    Column(\"date\", String),\n",
+    "                    Column(\"prcp\", Float),\n",
+    "                    Column(\"tobs\", Float)\n",
+    "                    )\n",
     "\n",
+    "station_table = Table(station, metadata,\n",
+    "                Column(\"id\", Integer, primary_key=True),\n",
+    "                Column(\"station\",String),\n",
+    "                Column(\"name\",String),\n",
+    "                Column(\"latitude\", Float),\n",
+    "                Column(\"longitude\", Float),\n",
+    "                Column(\"elevation\", Float)\n",
+    "                )\n",
+    "\n",
+    "\n",
+    "measurement_station = join(measurement_table, station_table)\n",
+    "\n",
+    "base = declarative_base()\n",
+    "\n",
+    "class StationMeasures(base):\n",
+    "    __tablename__ = \"measurement_station\"\n",
+    "    id = column_property(measurement_table.c.id, station_table.c.id)\n",
+    "    station = Column(String)\n",
+    "    date  = Column(String)\n",
+    "    prcp  = Column(Float)\n",
+    "    tobs  = Column(Float)\n",
+    "   \n",
+    "    \n",
     "# reflect the tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Mapper at 0x7f55eac84290; measures>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "measures.__mapper__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['measurement', 'station']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Base = automap_base()\n",
+    "Base.prepare(engine, reflect=True)\n",
+    "Base.classes.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can view all of the classes that automap found\n"
+    "measurement = Base.classes.measurement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station = Base.classes.station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Base' has no attribute '__mapper__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-0638128eb92f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# We can view all of the classes that automap found\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__mapper__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'Base' has no attribute '__mapper__'"
+     ]
+    }
+   ],
+   "source": [
+    "# We can view all of the classes that automap found\n",
+    "base.__mapper__"
    ]
   },
   {
@@ -302,6 +499,11 @@
   }
  ],
  "metadata": {
+  "environment": {
+   "name": "common-cpu.m54",
+   "type": "gcloud",
+   "uri": "gcr.io/deeplearning-platform-release/base-cpu:m54"
+  },
   "kernel_info": {
    "name": "python3"
   },
@@ -320,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.8"
   },
   "nteract": {
    "version": "0.12.3"
@@ -356,5 +558,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
