--- a/climate.ipynb
+++ b/climate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,6 +146,7 @@
     }
    ],
    "source": [
+    "# Using inspector script to determine the schema for the tables.\n",
     "inspector = inspect(engine)\n",
     "table_names = inspector.get_table_names()\n",
     "for table_name in table_names:\n",
@@ -156,68 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reflect an existing database into a new model\n",
-    "measurement_table = Table(measurement, metadata,\n",
-    "                    Column(\"id\", Integer, primary_key=True),\n",
-    "                    Column(\"station\", String),\n",
-    "                    Column(\"date\", String),\n",
-    "                    Column(\"prcp\", Float),\n",
-    "                    Column(\"tobs\", Float)\n",
-    "                    )\n",
-    "\n",
-    "station_table = Table(station, metadata,\n",
-    "                Column(\"id\", Integer, primary_key=True),\n",
-    "                Column(\"station\",String),\n",
-    "                Column(\"name\",String),\n",
-    "                Column(\"latitude\", Float),\n",
-    "                Column(\"longitude\", Float),\n",
-    "                Column(\"elevation\", Float)\n",
-    "                )\n",
-    "\n",
-    "\n",
-    "measurement_station = join(measurement_table, station_table)\n",
-    "\n",
-    "base = declarative_base()\n",
-    "\n",
-    "class StationMeasures(base):\n",
-    "    __tablename__ = \"measurement_station\"\n",
-    "    id = column_property(measurement_table.c.id, station_table.c.id)\n",
-    "    station = Column(String)\n",
-    "    date  = Column(String)\n",
-    "    prcp  = Column(Float)\n",
-    "    tobs  = Column(Float)\n",
-    "   \n",
-    "    \n",
-    "# reflect the tables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Mapper at 0x7f55eac84290; measures>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "measures.__mapper__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +166,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +179,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mapping measurement class\n",
+    "measurment = Base.classes.measurement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mapping station class\n",
+    "station = Base.classes.station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Table' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-4cda25c78def>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# reflect an existing database into a new model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m measurement_table = Table(measurement, metadata,\n\u001b[0m\u001b[1;32m      3\u001b[0m                     \u001b[0mColumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"id\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mInteger\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprimary_key\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                     \u001b[0mColumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"station\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mString\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                     \u001b[0mColumn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"date\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mString\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Table' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# reflect an existing database into a new model\n",
+    "base = declarative_base()\n",
+    "\n",
+    "class StationMeasures(base):\n",
+    "    __tablename__ = \"measurement_station\"\n",
+    "    id = column_property(measurement_table.c.id, station_table.c.id)\n",
+    "    station = Column(String)\n",
+    "    date  = Column(String)\n",
+    "    prcp  = Column(Float)\n",
+    "    tobs  = Column(Float)\n",
+    "    \n",
+    "\n",
+    "   \n",
+    "    \n",
+    "# reflect the tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measures.__mapper__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Base = automap_base()\n",
+    "Base.prepare(engine, reflect=True)\n",
+    "Base.classes.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -267,14 +282,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-0638128eb92f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# We can view all of the classes that automap found\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__mapper__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-22-3d1efdaf9cda>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# We can view all of the classes that automap found\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mBase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__mapper__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m: type object 'Base' has no attribute '__mapper__'"
      ]
     }
    ],
    "source": [
     "# We can view all of the classes that automap found\n",
-    "base.__mapper__"
+    "Base.__mapper__"
    ]
   },
   {
@@ -288,11 +303,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19550\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)\n",
+    "print(session.query(func.count(measurement.id)).first()[0])\n",
+    "print(session.query(func.count(station.id)).first()[0])"
    ]
   },
   {
@@ -495,6 +522,33 @@
    "outputs": [],
    "source": [
     "# Plot the daily normals as an area plot with `stacked=False`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measurement_table = Table(measurement, metadata,\n",
+    "                    Column(\"id\", Integer, primary_key=True),\n",
+    "                    Column(\"station\", String),\n",
+    "                    Column(\"date\", String),\n",
+    "                    Column(\"prcp\", Float),\n",
+    "                    Column(\"tobs\", Float)\n",
+    "                    )\n",
+    "\n",
+    "station_table = Table(station, metadata,\n",
+    "                Column(\"id\", Integer, primary_key=True),\n",
+    "                Column(\"station\",String),\n",
+    "                Column(\"name\",String),\n",
+    "                Column(\"latitude\", Float),\n",
+    "                Column(\"longitude\", Float),\n",
+    "                Column(\"elevation\", Float)\n",
+    "                )\n",
+    "\n",
+    "\n",
+    "measurement_station = join(measurement_table, station_table)"
    ]
   }
  ],
