--- a/climate.ipynb
+++ b/climate.ipynb
@@ -476,21 +476,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9,)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Design a query to show how many stations are available in this dataset?\n"
+    "# Design a query to show how many stations are available in this dataset?\n",
+    "station_count = session.query(func.count(station.id)).all()\n",
+    "print(station_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('USC00519281', 2772),\n",
+      " ('USC00519397', 2724),\n",
+      " ('USC00513117', 2709),\n",
+      " ('USC00519523', 2669),\n",
+      " ('USC00516128', 2612),\n",
+      " ('USC00514830', 2202),\n",
+      " ('USC00511918', 1979),\n",
+      " ('USC00517948', 1372),\n",
+      " ('USC00518838', 511)]\n"
+     ]
+    }
+   ],
    "source": [
     "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "pprint(session.query(measurement.station, \n",
+    "func.count(measurement.station))\n",
+    ".group_by(measurement.station)\n",
+    ".order_by(func.count(measurement.station).desc()).all())"
    ]
   },
   {
