Updated temperature query by filtering the most active station only.

--- a/climate.ipynb
+++ b/climate.ipynb
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -702,29 +702,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2229</th>\n",
-       "      <td>2017-08-23</td>\n",
+       "      <th>351</th>\n",
+       "      <td>2017-08-18</td>\n",
+       "      <td>79.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>2017-08-17</td>\n",
        "      <td>76.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1528</th>\n",
-       "      <td>2017-08-23</td>\n",
-       "      <td>82.0</td>\n",
+       "      <th>349</th>\n",
+       "      <td>2017-08-16</td>\n",
+       "      <td>76.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1008</th>\n",
-       "      <td>2017-08-23</td>\n",
-       "      <td>82.0</td>\n",
+       "      <th>348</th>\n",
+       "      <td>2017-08-15</td>\n",
+       "      <td>77.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>360</th>\n",
-       "      <td>2017-08-23</td>\n",
-       "      <td>81.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1527</th>\n",
-       "      <td>2017-08-22</td>\n",
-       "      <td>82.0</td>\n",
+       "      <th>347</th>\n",
+       "      <td>2017-08-14</td>\n",
+       "      <td>77.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -732,62 +732,61 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>361</th>\n",
-       "      <td>2016-08-23</td>\n",
-       "      <td>76.0</td>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-08-27</td>\n",
+       "      <td>75.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1881</th>\n",
-       "      <td>2016-08-23</td>\n",
-       "      <td>74.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1192</th>\n",
-       "      <td>2016-08-23</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-08-26</td>\n",
        "      <td>80.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1009</th>\n",
-       "      <td>2016-08-23</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-08-25</td>\n",
        "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-08-24</td>\n",
+       "      <td>77.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2016-08-23</td>\n",
-       "      <td>81.0</td>\n",
+       "      <td>77.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2230 rows × 2 columns</p>\n",
+       "<p>352 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Date  Temperature\n",
-       "2229  2017-08-23         76.0\n",
-       "1528  2017-08-23         82.0\n",
-       "1008  2017-08-23         82.0\n",
-       "360   2017-08-23         81.0\n",
-       "1527  2017-08-22         82.0\n",
-       "...          ...          ...\n",
-       "361   2016-08-23         76.0\n",
-       "1881  2016-08-23         74.0\n",
-       "1192  2016-08-23         80.0\n",
-       "1009  2016-08-23         80.0\n",
-       "0     2016-08-23         81.0\n",
+       "           Date  Temperature\n",
+       "351  2017-08-18         79.0\n",
+       "350  2017-08-17         76.0\n",
+       "349  2017-08-16         76.0\n",
+       "348  2017-08-15         77.0\n",
+       "347  2017-08-14         77.0\n",
+       "..          ...          ...\n",
+       "4    2016-08-27         75.0\n",
+       "3    2016-08-26         80.0\n",
+       "2    2016-08-25         80.0\n",
+       "1    2016-08-24         77.0\n",
+       "0    2016-08-23         77.0\n",
        "\n",
-       "[2230 rows x 2 columns]"
+       "[352 rows x 2 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Query the last 12 months of temperature observation data for this station and plot the results as a histogram\n",
-    "temp_12mnths_q = session.query(measurement.date, measurement.tobs).filter(\n",
+    "temp_12mnths_q = session.query(measurement.date, measurement.tobs).filter(measurement.station==\"USC00519281\").filter(\n",
     "    and_(measurement.date >= \"2016-08-23\", measurement.date <= \"2017-08-23\"))\n",
-    "\n",
     "temp_12mnths = temp_12mnths_q.all()\n",
     "temp_12mnths_df = pd.DataFrame(temp_12mnths).rename(columns={\"date\": \"Date\", \"tobs\": \"Temperature\"})\n",
     "\n",
