Was just copy and pasting some fields. I plan to delete this file later.

--- a/climate.ipynb
+++ b/climate.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,88 +399,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Precipitation</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>2021.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>0.177279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.461190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>0.020000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>0.130000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>6.700000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Precipitation\n",
-       "count    2021.000000\n",
-       "mean        0.177279\n",
-       "std         0.461190\n",
-       "min         0.000000\n",
-       "25%         0.000000\n",
-       "50%         0.020000\n",
-       "75%         0.130000\n",
-       "max         6.700000"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "precip_12mnths_df.describe()"
    ]
@@ -494,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +673,7 @@
        "[352 rows x 1 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +846,7 @@
        "0  65.0  72.102941  80.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1008,7 @@
        "[68 rows x 3 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1158,7 @@
        "8      152.4  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1294,7 @@
        "3 -1263.80080       95.2  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,12 +1309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the total amount of rainfall per weather station for your trip dates using the previous year's matching dates.\n",
@@ -1406,14 +1322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1431,11 +1341,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -1444,13 +1352,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706a1f690>, 'date': '2017-02-13', 'id': 5265, 'tobs': 69.0, 'station': 'USC00513117', 'prcp': 2.9} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706a95f90>, 'latitude': 21.4234, 'station': 'USC00513117', 'elevation': 14.6, 'name': 'KANEOHE 838.1, HI US', 'longitude': -157.8015, 'id': 2}\n",
-      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706a1f710>, 'date': '2017-02-13', 'id': 14782, 'tobs': 73.0, 'station': 'USC00519281', 'prcp': 0.01} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706c98350>, 'latitude': 21.45167, 'station': 'USC00519281', 'elevation': 32.9, 'name': 'WAIHEE 837.5, HI US', 'longitude': -157.84888999999998, 'id': 7}\n",
-      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706a1f790>, 'date': '2017-02-13', 'id': 12015, 'tobs': 78.0, 'station': 'USC00519523', 'prcp': 0.0} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706bb5b10>, 'latitude': 21.33556, 'station': 'USC00519523', 'elevation': 19.5, 'name': 'WAIMANALO EXPERIMENTAL FARM, HI US', 'longitude': -157.71139, 'id': 6}\n",
-      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706a1f810>, 'date': '2017-02-13', 'id': 7478, 'tobs': 80.0, 'station': 'USC00514830', 'prcp': 0.0} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706bb5c50>, 'latitude': 21.5213, 'station': 'USC00514830', 'elevation': 7.0, 'name': 'KUALOA RANCH HEADQUARTERS 886.9, HI US', 'longitude': -157.8374, 'id': 3}\n",
-      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706a1f890>, 'date': '2017-02-13', 'id': 19371, 'tobs': 68.0, 'station': 'USC00516128', 'prcp': 0.0} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706a8cf10>, 'latitude': 21.3331, 'station': 'USC00516128', 'elevation': 152.4, 'name': 'MANOA LYON ARBO 785.2, HI US', 'longitude': -157.8025, 'id': 9}\n",
-      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706a1f950>, 'date': '2017-02-13', 'id': 2538, 'tobs': 74.0, 'station': 'USC00519397', 'prcp': 0.01} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706bb5ad0>, 'latitude': 21.2716, 'station': 'USC00519397', 'elevation': 3.0, 'name': 'WAIKIKI 717.2, HI US', 'longitude': -157.8168, 'id': 1}\n",
-      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706a1f9d0>, 'date': '2017-02-13', 'id': 8925, 'tobs': 77.0, 'station': 'USC00517948', 'prcp': None} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f7706b95590>, 'latitude': 21.3934, 'station': 'USC00517948', 'elevation': 11.9, 'name': 'PEARL CITY, HI US', 'longitude': -157.9751, 'id': 4}\n"
+      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b4d0>, 'id': 5265, 'tobs': 69.0, 'date': '2017-02-13', 'prcp': 2.9, 'station': 'USC00513117'} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b550>, 'latitude': 21.4234, 'station': 'USC00513117', 'elevation': 14.6, 'name': 'KANEOHE 838.1, HI US', 'id': 2, 'longitude': -157.8015}\n",
+      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b5d0>, 'id': 14782, 'tobs': 73.0, 'date': '2017-02-13', 'prcp': 0.01, 'station': 'USC00519281'} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b650>, 'latitude': 21.45167, 'station': 'USC00519281', 'elevation': 32.9, 'name': 'WAIHEE 837.5, HI US', 'id': 7, 'longitude': -157.84888999999998}\n",
+      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b6d0>, 'id': 12015, 'tobs': 78.0, 'date': '2017-02-13', 'prcp': 0.0, 'station': 'USC00519523'} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b750>, 'latitude': 21.33556, 'station': 'USC00519523', 'elevation': 19.5, 'name': 'WAIMANALO EXPERIMENTAL FARM, HI US', 'id': 6, 'longitude': -157.71139}\n",
+      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b7d0>, 'id': 7478, 'tobs': 80.0, 'date': '2017-02-13', 'prcp': 0.0, 'station': 'USC00514830'} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b850>, 'latitude': 21.5213, 'station': 'USC00514830', 'elevation': 7.0, 'name': 'KUALOA RANCH HEADQUARTERS 886.9, HI US', 'id': 3, 'longitude': -157.8374}\n",
+      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b8d0>, 'id': 19371, 'tobs': 68.0, 'date': '2017-02-13', 'prcp': 0.0, 'station': 'USC00516128'} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857b950>, 'latitude': 21.3331, 'station': 'USC00516128', 'elevation': 152.4, 'name': 'MANOA LYON ARBO 785.2, HI US', 'id': 9, 'longitude': -157.8025}\n",
+      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857ba10>, 'id': 2538, 'tobs': 74.0, 'date': '2017-02-13', 'prcp': 0.01, 'station': 'USC00519397'} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857ba90>, 'latitude': 21.2716, 'station': 'USC00519397', 'elevation': 3.0, 'name': 'WAIKIKI 717.2, HI US', 'id': 1, 'longitude': -157.8168}\n",
+      "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857bb10>, 'id': 8925, 'tobs': 77.0, 'date': '2017-02-13', 'prcp': None, 'station': 'USC00517948'} {'_sa_instance_state': <sqlalchemy.orm.state.InstanceState object at 0x7f19d857bb90>, 'latitude': 21.3934, 'station': 'USC00517948', 'elevation': 11.9, 'name': 'PEARL CITY, HI US', 'id': 4, 'longitude': -157.9751}\n"
      ]
     }
    ],
@@ -1461,11 +1369,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     }
    },
@@ -1555,7 +1461,7 @@
        "6  <sqlalchemy.ext.automap.station object at 0x7f...  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1482,7 @@
        "[(62.0, 69.15384615384616, 77.0)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
