--- a/climate_revised.ipynb
+++ b/climate_revised.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "[2230 rows x 1 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,13 +456,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Design a query to calculate the total number of stations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(9,)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "station_count = session.query(func.count(Station.id)).all()\n",
+    "print(station_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### What are the most active stations? (i.e. what stations have the most rows)?\n",
     "* List the stations and the counts in descending order."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +645,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Temperature</th>\n",
+       "      <th>Temp (F)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
@@ -678,24 +703,24 @@
        "</div>"
       ],
       "text/plain": [
-       "            Temperature\n",
-       "Date                   \n",
-       "2017-08-18         79.0\n",
-       "2017-08-17         76.0\n",
-       "2017-08-16         76.0\n",
-       "2017-08-15         77.0\n",
-       "2017-08-14         77.0\n",
-       "...                 ...\n",
-       "2016-08-27         75.0\n",
-       "2016-08-26         80.0\n",
-       "2016-08-25         80.0\n",
-       "2016-08-24         77.0\n",
-       "2016-08-23         77.0\n",
+       "            Temp (F)\n",
+       "Date                \n",
+       "2017-08-18      79.0\n",
+       "2017-08-17      76.0\n",
+       "2017-08-16      76.0\n",
+       "2017-08-15      77.0\n",
+       "2017-08-14      77.0\n",
+       "...              ...\n",
+       "2016-08-27      75.0\n",
+       "2016-08-26      80.0\n",
+       "2016-08-25      80.0\n",
+       "2016-08-24      77.0\n",
+       "2016-08-23      77.0\n",
        "\n",
        "[352 rows x 1 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +729,7 @@
     "temp_12mnths_q = session.query(Measurement.date, Measurement.tobs).filter(Measurement.station==\"USC00519281\").filter(\n",
     "    and_(Measurement.date >= \"2016-08-23\", Measurement.date <= \"2017-08-23\"))\n",
     "temp_12mnths = temp_12mnths_q.all()\n",
-    "temp_12mnths_df = pd.DataFrame(temp_12mnths).rename(columns={\"date\": \"Date\", \"tobs\": \"Temperature\"})\n",
+    "temp_12mnths_df = pd.DataFrame(temp_12mnths).rename(columns={\"date\": \"Date\", \"tobs\": \"Temp (F)\"})\n",
     "\n",
     "temp_12mnths_df.sort_values(by=[\"Date\"], inplace=True, ascending=False)\n",
     "temp_12mnths_df.set_index(\"Date\", inplace=True)\n",
@@ -720,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +886,7 @@
        "0  65.0  72.102941  80.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1048,7 @@
        "[68 rows x 3 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1206,7 @@
        "8      152.4  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1342,7 @@
        "3 -1263.80080       95.2  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
